<resources>
    <string name="app_name">CS Geeks</string>
    <string name="blog_article_thumbnail">Blog Article Thumbnail</string>
    <string name="menu_all_articles">All Articles</string>
    <string name="menu_create_article">Create Article</string>
    <string name="menu_manage_articles">Manage Articles</string>
    <string name="menu_logout">Logout</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by">Sort By</string>
    <string name="home">Home</string>
    <string name="categories">Categories</string>
    <string name="login">Login</string>
    <string name="title_z_to_a">Title — Z to A</string>
    <string name="author_a_to_z">Author — A to Z</string>
    <string name="author_z_to_a">Author — Z to A</string>
    <string name="title_a_to_z">Title — A to Z</string>
    <string name="oldest_first">Oldest First</string>
    <string name="latest_first">Latest First</string>
    <string name="apply">Apply</string>
    <string name="app_name_splash">CS<br />GEEKS</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="nav_header_image">Nav Header Image</string>
    <string name="author_image_desc">Author Image</string>
    <string name="regular_usr">Regular User</string>
    <string name="login_if_author_msg">Login if you\'re Author</string>
    <string name="author_mail_desc">author mail</string>
    <string name="author_insta_desc">author instagram profile</string>
    <string name="author_twitter_desc">author twitter profile</string>
    <string name="author_github_desc">author github profile</string>
    <string name="share">Share</string>
    <string name="article_body">Article Body</string>
    <string name="title_of_the_article">Title of the article</string>
    <string name="author_name">Author name</string>
    <string name="thumbnail_image_link">Thumbnail image link</string>
    <string name="tags_edit_text_hint">Tags (seperated by comma)</string>
    <string name="description_hint">Description</string>
    <string name="enter_article_body">Enter Article Body</string>
</resources>