<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sortOptionsBottomSheetLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackgroundDark2"
    android:paddingTop="20dp"
    android:paddingBottom="40dp"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/sortByLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/sort_by"
        android:textColor="@color/colorNordBlue"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvApplyBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="20dp"
        android:text="@string/apply"
        android:textColor="@color/colorNordBlue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorNordGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sortByLabel" />


    <RadioGroup
        android:id="@+id/sortByOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line">


        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sortByTimeAscending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:checked="true"
            android:paddingHorizontal="20dp"
            android:tag="1"
            android:text="@string/latest_first"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sortByTimeDescending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="20dp"
            android:tag="2"
            android:text="@string/oldest_first"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sortByTitleAscending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="20dp"
            android:tag="3"
            android:text="@string/title_a_to_z"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sortByTitleDescending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="20dp"
            android:tag="4"
            android:text="@string/title_z_to_a"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sortByAuthorAscending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="20dp"
            android:tag="5"
            android:text="@string/author_a_to_z"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/sortByAuthorDescending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="20dp"
            android:tag="6"
            android:text="@string/author_z_to_a"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18sp" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>